--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6"
   },
   "name": "atividade-bootstrap",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "start": "node ."
   },
